# Crimson

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Crimson.slnx  LICENSE  NOTICE  README.md  RELEASE_CHECKLIST.md  SECURITY.md
examples/CppDeviceDemo/: .gitignore  CMakeLists.txt  CMakePresets.json  CppDeviceDemo.crimsonproj  README.md
examples/CppDeviceDemo/.crimson/cmake/: Crimson.Cpp.cmake  Crimson.cpp.cmake
examples/CppDeviceDemo/app/: main.cpp
examples/SmartHomeDemo/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  SmartHome.Rust.crimsonproj  SmartHome.crimsonproj
examples/SmartHomeDemo/.cargo/: config.toml
examples/SmartHomeDemo/.crimson/cargo/: Crimson.Cargo.rs
examples/SmartHomeDemo/.crimson/cmake/: Crimson.Cpp.cmake  Crimson.cpp.cmake
examples/SmartHomeDemo/.crimson/msbuild/: Crimson.CSharp.props  Crimson.CSharp.targets  Crimson.csharp.props  Crimson.csharp.targets
examples/SmartHomeDemo/app/: Program.cs  ReflectionHomeController.cs  SmartHomeDemo.App.csproj
examples/SmartHomeDemo/contracts/: home.idl
examples/SmartHomeDemo/contracts/core/: capabilities.idl  smart_home.idl
examples/SmartHomeDemo/contracts/vendors/eufy/: eufy_doorbell.idl
examples/SmartHomeDemo/contracts/vendors/hue/: hue_bulb.idl
examples/SmartHomeDemo/contracts/vendors/nest/: nest_thermostat.idl
examples/SmartHomeDemo/contracts/vendors/ring/: ring_doorbell.idl
examples/SmartHomeDemo/contracts/vendors/sonos/: sonos_speaker.idl
examples/SmartHomeDemo/cpp-app/: main.cpp
examples/SmartHomeDemo/rust/src/: main.rs
(+115 files in other folders)
